@@ -21,4 +21,15 @@ check_cmdcount: 655360
 
 check_gotocount: 2048
 
+// Default value of the 'min' argument of the script command 'input'.
+// When the 'min' argument isn't provided, this value is used instead.
+// Defaults to 0.
+//input_min_value: 0
+
+// Default value of the 'max' argument of the script command 'input'.
+// When the 'max' argument isn't provided, this value is used instead.
+// Defaults to INT_MAX.
+//input_max_value: 2147483647
+input_max_value: 10000000
+
 import: conf/import/script_conf.txt
